# ftp_sftp_sync_app

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  build_config.json  main.py  pyproject.toml
.github/workflows/: changelog-gen.yml  pylint.yml  python-app.yml
app/: argument.py  config.py  data_attribute.py  sync.py
config/: config.ini.template
doc/: RELEASE.md
