[tool.poetry]
name = "ftp_sftp_sync"
version = "0.0.1"
description = "Sync files in folders via FTP/SFTP"
authors = ["Maxim Ishchenko <m.g.ishchenko@yandex.ru>"]
readme = "README.md"
packages = [{include = "ftp_sftp_sync"}]

[tool.poetry.dependencies]
python = "^3.7"
paramiko = "^3.4.0"
cryptography = "42.0.8"


[tool.poetry.group.dev.dependencies]
commitizen = "3.0.0"
pre-commit = "2.9.2"
isort = "5.0.0"
typed-ast = "1.3.0"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_type = "semver"
version_provider = "poetry"
update_changelog_on_bump = true
major_version_zero = true

[tool.isort]
multi_line_output = 3
py_version = 27
